refresh image at start

--- a/index.html
+++ b/index.html
@@ -1767,6 +1767,7 @@
             document.getElementById("hint").style.display = "inline-block";
         }
         
+        refreshImage();
         function refreshImage() {
             // Example API endpoint to fetch a random image from Lorem Picsum
             const width = 500; // Specify image width
