--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         .language {
             position: fixed;
-            top: 30px;
+            bottom: 30px;
             right: 30px;
         }
     </style>
