more french verbs

--- a/index.html
+++ b/index.html
@@ -654,97 +654,156 @@
 // { "name": "gérondif", "hint": "1er groupe: en parlant\n\n2ème groupe: en finissant\n\n3ème groupe: en vendant" }
 ];
 
-        const verbs_french = [
-{ "tense1": "Encontrar", "tense2": "Trouver" },
-{ "tense1": "Dar", "tense2": "Donner" },
-{ "tense1": "Hablar", "tense2": "Parler" },
-{ "tense1": "Amar", "tense2": "Aimer" },
-{ "tense1": "Pasar", "tense2": "Passer" },
-{ "tense1": "Preguntar", "tense2": "Demander" },
-{ "tense1": "Parecer", "tense2": "Sembler" },
-{ "tense1": "Dejar", "tense2": "Laisser" },
-{ "tense1": "Quedar", "tense2": "Rester" },
-{ "tense1": "Pensar", "tense2": "Penser" },
-{ "tense1": "Mirar", "tense2": "Regarder" },
-{ "tense1": "Llegar", "tense2": "Arriver" },
-{ "tense1": "Buscar", "tense2": "Chercher" },
-{ "tense1": "Llevar", "tense2": "Porter" },
-{ "tense1": "Entrar", "tense2": "Entrer" },
-{ "tense1": "Llamar", "tense2": "Appeler" },
-{ "tense1": "Caer", "tense2": "Tomber" },
-{ "tense1": "Comenzar", "tense2": "Commencer" },
-{ "tense1": "Mostrar", "tense2": "Montrer" },
-{ "tense1": "Parar", "tense2": "Arrêter" },
-{ "tense1": "Lanzar", "tense2": "Jeter" },
-{ "tense1": "Subir", "tense2": "Monter" },
-{ "tense1": "Levantar", "tense2": "Lever" },
-{ "tense1": "Escuchar", "tense2": "Écouter" },
-{ "tense1": "Continuar", "tense2": "Continuer" },
-{ "tense1": "Añadir", "tense2": "Ajouter" },
-{ "tense1": "Jugar", "tense2": "Jouer" },
-{ "tense1": "Andar", "tense2": "Marcher" },
-{ "tense1": "Guardar", "tense2": "Garder" },
-{ "tense1": "Faltar", "tense2": "Manquer" },
-{ "tense1": "Encontrar de nuevo", "tense2": "Retrouver" },
-{ "tense1": "Recordar", "tense2": "Rappeler" },
-{ "tense1": "Girar", "tense2": "Tourner" },
-{ "tense1": "Gritar", "tense2": "Crier" },
-{ "tense1": "Soñar", "tense2": "Songer" },
-{ "tense1": "Presentar", "tense2": "Présenter" },
-{ "tense1": "Existir", "tense2": "Exister" },
-{ "tense1": "Enviar", "tense2": "Envoyer" },
-{ "tense1": "Explicar", "tense2": "Expliquer" },
-{ "tense1": "Comer", "tense2": "Manger" },
-{ "tense1": "Terminar", "tense2": "Finir" },
-{ "tense1": "Actuar", "tense2": "Agir" },
-{ "tense1": "Ser o Estar", "tense2": "Être" },
-{ "tense1": "Tener", "tense2": "Avoir" },
-{ "tense1": "Hacer", "tense2": "Faire" },
-{ "tense1": "Decir", "tense2": "Dire" },
-{ "tense1": "Poder", "tense2": "Pouvoir" },
-{ "tense1": "Ir", "tense2": "Aller" },
-{ "tense1": "Ver", "tense2": "Voir" },
-{ "tense1": "Saber", "tense2": "Savoir" },
-{ "tense1": "Querer", "tense2": "Vouloir" },
-{ "tense1": "Venir", "tense2": "Venir" },
-{ "tense1": "Ser necesario", "tense2": "Falloir" },
-{ "tense1": "Deber", "tense2": "Devoir" },
-{ "tense1": "Creer", "tense2": "Croire" },
-{ "tense1": "Tomar", "tense2": "Prendre" },
-{ "tense1": "Poner", "tense2": "Mettre" },
-{ "tense1": "Sostener", "tense2": "Tenir" },
-{ "tense1": "Oír", "tense2": "Entendre" },
-{ "tense1": "Responder", "tense2": "Répondre" },
-{ "tense1": "Devolver", "tense2": "Rendre" },
-{ "tense1": "Conocer", "tense2": "Connaître" },
-{ "tense1": "Parecer", "tense2": "Paraître" },
-{ "tense1": "Sentir", "tense2": "Sentir" },
-{ "tense1": "Esperar", "tense2": "Attendre" },
-{ "tense1": "Vivir", "tense2": "Vivre" },
-{ "tense1": "Oler", "tense2": "Sentir" },
-{ "tense1": "Comprender", "tense2": "Comprendre" },
-{ "tense1": "Convertirse en", "tense2": "Devenir" },
-{ "tense1": "Retener", "tense2": "Retenir" },
-{ "tense1": "Escribir", "tense2": "Écrire" },
-{ "tense1": "Retomar", "tense2": "Reprendre" },
-{ "tense1": "Seguir", "tense2": "Suivre" },
-{ "tense1": "Partir", "tense2": "Partir" },
-{ "tense1": "Morir", "tense2": "Mourir" },
-{ "tense1": "Abrir", "tense2": "Ouvrir" },
-{ "tense1": "Leer", "tense2": "Lire" },
-{ "tense1": "Servir", "tense2": "Servir" },
-{ "tense1": "Recibir", "tense2": "Recevoir" },
-{ "tense1": "Perder", "tense2": "Perdre" },
-{ "tense1": "Sonreír", "tense2": "Sourire" },
-{ "tense1": "Percibir", "tense2": "Apercevoir" },
-{ "tense1": "Reconocer", "tense2": "Reconnaître" },
-{ "tense1": "Bajar", "tense2": "Descendre" },
-{ "tense1": "Correr", "tense2": "Courir" },
-{ "tense1": "Permitir", "tense2": "Permettre" },
-{ "tense1": "Ofrecer", "tense2": "Offrir" },
-{ "tense1": "Aprender", "tense2": "Apprendre" },
-{ "tense1": "Sufrir", "tense2": "Souffrir" }
-];           
+const verbs_french = [
+  { "tense1": "Encontrar", "tense2": "trouver/trouve/a trouvé/trouvera/trouvait/trouve" },
+  { "tense1": "Dar", "tense2": "donner/donne/a donné/donnera/donnait/donne" },
+  { "tense1": "Hablar", "tense2": "parler/parle/a parlé/parlera/parlait/parle" },
+  { "tense1": "Amar", "tense2": "aimer/aime/a aimé/aimera/aimait/aime" },
+  { "tense1": "Pasar", "tense2": "passer/passe/a passé/passera/passait/passe" },
+  { "tense1": "Preguntar", "tense2": "demander/demande/a demandé/demandera/demandait/demande" },
+  { "tense1": "Parecer", "tense2": "sembler/semble/a semblé/semblera/semblait/semble" },
+  { "tense1": "Dejar", "tense2": "laisser/laisse/a laissé/laissera/laissait/laisse" },
+  { "tense1": "Quedar", "tense2": "rester/reste/est resté/restera/restait/reste" },
+  { "tense1": "Pensar", "tense2": "penser/pense/a pensé/pensera/pensait/pense" },
+  { "tense1": "Mirar", "tense2": "regarder/regarde/a regardé/regardera/regardait/regarde" },
+  { "tense1": "Llegar", "tense2": "arriver/arrive/est arrivé/arrivera/arrivait/arrive" },
+  { "tense1": "Buscar", "tense2": "chercher/cherche/a cherché/cherchera/cherchait/cherche" },
+  { "tense1": "Llevar", "tense2": "porter/porte/a porté/portera/portait/porte" },
+  { "tense1": "Entrar", "tense2": "entrer/entre/est entré/entrera/entrait/entre" },
+  { "tense1": "Llamar", "tense2": "appeler/appelle/a appelé/appellera/appelait/appelle" },
+  { "tense1": "Caer", "tense2": "tomber/tombe/est tombé/tombera/tombait/tombe" },
+  { "tense1": "Comenzar", "tense2": "commencer/commence/a commencé/commencera/commençait/commence" },
+  { "tense1": "Mostrar", "tense2": "montrer/montre/a montré/montrera/montrait/montre" },
+  { "tense1": "Parar", "tense2": "arrêter/arrête/a arrêté/arrêtera/arrêtait/arrête" },
+  { "tense1": "Lanzar", "tense2": "jeter/jette/a jeté/jettera/jetait/jette" },
+  { "tense1": "Subir", "tense2": "monter/monte/est monté/montera/montait/monte" },
+  { "tense1": "Levantar", "tense2": "lever/lève/a levé/lèvera/levait/lève" },
+  { "tense1": "Escuchar", "tense2": "écouter/écoute/a écouté/écoutera/écoutait/écoute" },
+  { "tense1": "Continuar", "tense2": "continuer/continue/a continué/continuera/continuait/continue" },
+  { "tense1": "Añadir", "tense2": "ajouter/ajoute/a ajouté/ajoutera/ajoutait/ajoute" },
+  { "tense1": "Jugar", "tense2": "jouer/joue/a joué/jouera/jouait/joue" },
+  { "tense1": "Andar", "tense2": "marcher/marche/a marché/marchera/marchait/marche" },
+  { "tense1": "Guardar", "tense2": "garder/garde/a gardé/gardera/gardait/garde" },
+  { "tense1": "Faltar", "tense2": "manquer/manque/a manqué/manquera/manquait/manque" },
+  { "tense1": "Encontrar de nuevo", "tense2": "retrouver/retrouve/a retrouvé/retrouvera/retrouvait/retrouve" },
+  { "tense1": "Recordar", "tense2": "rappeler/rappelle/a rappelé/rappellera/rappelait/rappelle" },
+  { "tense1": "Girar", "tense2": "tourner/tourne/a tourné/tournera/tournait/tourne" },
+  { "tense1": "Gritar", "tense2": "crier/crie/a crié/criera/criait/crie" },
+  { "tense1": "Soñar", "tense2": "songer/songe/a songé/songera/songeait/songe" },
+  { "tense1": "Presentar", "tense2": "présenter/présente/a présenté/présentera/présentait/présente" },
+  { "tense1": "Existir", "tense2": "exister/existe/a existé/existera/existait/existe" },
+  { "tense1": "Enviar", "tense2": "envoyer/envoie/a envoyé/enverra/envoyait/envoie" },
+  { "tense1": "Explicar", "tense2": "expliquer/explique/a expliqué/expliquera/expliquait/explique" },
+  { "tense1": "Comer", "tense2": "manger/mange/a mangé/mangera/mangeait/mange" },
+  { "tense1": "Terminar", "tense2": "finir/finit/a fini/finira/finissait/finisse" },
+  { "tense1": "Actuar", "tense2": "agir/agit/a agi/agira/agissait/agisse" },
+  { "tense1": "Ser o Estar", "tense2": "être/est/a été/sera/était/soit" },
+  { "tense1": "Tener", "tense2": "avoir/a/a eu/aura/avait/ait" },
+  { "tense1": "Hacer", "tense2": "faire/fait/a fait/fera/faisait/fasse" },
+  { "tense1": "Decir", "tense2": "dire/dit/a dit/dira/disait/dise" },
+  { "tense1": "Poder", "tense2": "pouvoir/peut/a pu/pourra/pouvait/puisse" },
+  { "tense1": "Ir", "tense2": "aller/va/est allé/ira/allait/aille" },
+  { "tense1": "Ver", "tense2": "voir/voit/a vu/verra/voyait/voie" },
+  { "tense1": "Saber", "tense2": "savoir/sait/a su/saura/savait/sache" },
+  { "tense1": "Querer", "tense2": "vouloir/veut/a voulu/voudra/voulait/veuille" },
+  { "tense1": "Venir", "tense2": "venir/vient/est venu/viendra/venait/vienne" },
+  { "tense1": "Ser necesario", "tense2": "falloir/faut/a fallu/faudra/fallait/faille" },
+  { "tense1": "Deber", "tense2": "devoir/doit/a dû/devra/devait/doive" },
+  { "tense1": "Creer", "tense2": "croire/croit/a cru/croira/croyait/croie" },
+  { "tense1": "Tomar", "tense2": "prendre/prend/a pris/prendra/prenait/prenne" },
+  { "tense1": "Poner", "tense2": "mettre/met/a mis/mettra/mettait/mette" },
+  { "tense1": "Sostener", "tense2": "tenir/tient/a tenu/tiendra/tenait/tienne" },
+  { "tense1": "Oír", "tense2": "entendre/entend/a entendu/entendra/entendait/entende" },
+  { "tense1": "Responder", "tense2": "répondre/répond/a répondu/répondra/répondait/réponde" },
+  { "tense1": "Devolver", "tense2": "rendre/rend/a rendu/rendra/rendait/rende" },
+  { "tense1": "Conocer", "tense2": "connaître/connaît/a connu/connaîtra/connaissait/connaisse" },
+  { "tense1": "Parecer", "tense2": "paraître/paraît/a paru/paraîtra/paraissait/paraisse" },
+  { "tense1": "Sentir", "tense2": "sentir/sent/a senti/sentira/sentait/sente" },
+  { "tense1": "Esperar", "tense2": "attendre/attend/a attendu/attendra/attendait/attende" },
+  { "tense1": "Vivir", "tense2": "vivre/vit/a vécu/vivra/vivait/vive" },
+  { "tense1": "Oler", "tense2": "sentir/sent/a senti/sentira/sentait/sente" },
+  { "tense1": "Comprender", "tense2": "comprendre/comprend/a compris/comprendra/comprenait/comprenne" },
+  { "tense1": "Convertirse en", "tense2": "devenir/devient/est devenu/deviendra/devenait/devienne" },
+  { "tense1": "Retener", "tense2": "retenir/retient/a retenu/retiendra/retenait/retienne" },
+  { "tense1": "Escribir", "tense2": "écrire/écrit/a écrit/écrira/écrivait/écrive" },
+  { "tense1": "Retomar", "tense2": "reprendre/reprend/a repris/reprendra/reprenait/reprenne" },
+  { "tense1": "Seguir", "tense2": "suivre/suit/a suivi/suivra/suivait/suive" },
+  { "tense1": "Partir", "tense2": "partir/part/est parti/partira/partait/parte" },
+  { "tense1": "Morir", "tense2": "mourir/meurt/est mort/mourra/mourait/meure" },
+  { "tense1": "Abrir", "tense2": "ouvrir/ouvre/a ouvert/ouvrira/ouvrait/ouvre" },
+  { "tense1": "Leer", "tense2": "lire/lit/a lu/lira/lisait/lise" },
+  { "tense1": "Servir", "tense2": "servir/sert/a servi/servira/servait/serve" },
+  { "tense1": "Recibir", "tense2": "recevoir/reçoit/a reçu/recevra/recevait/reçoive" },
+  { "tense1": "Perder", "tense2": "perdre/perd/a perdu/perdra/perdait/perde" },
+  { "tense1": "Sonreír", "tense2": "sourire/sourit/a souri/sourira/souriait/sourie" },
+  { "tense1": "Percibir", "tense2": "apercevoir/aperçoit/a aperçu/apercevra/apercevait/aperçoive" },
+  { "tense1": "Reconocer", "tense2": "reconnaître/reconnaît/a reconnu/reconnaîtra/reconnaissait/reconnaisse" },
+  { "tense1": "Bajar", "tense2": "descendre/descend/est descendu/descendra/descendait/descende" },
+  { "tense1": "Correr", "tense2": "courir/court/a couru/courra/courait/coure" },
+  { "tense1": "Permitir", "tense2": "permettre/permet/a permis/permettra/permettait/permette" },
+  { "tense1": "Ofrecer", "tense2": "offrir/offre/a offert/offrira/offrait/offre" },
+  { "tense1": "Aprender", "tense2": "apprendre/apprend/a appris/apprendra/apprenait/apprenne" },
+  { "tense1": "Sufrir", "tense2": "souffrir/souffre/a souffert/souffrira/souffrait/souffre" },
+  { "tense1": "Pedir", "tense2": "demander/demande/a demandé/demandera/demandait/demande" },
+  { "tense1": "Comer", "tense2": "manger/mange/a mangé/mangera/mangeait/mange" },
+  { "tense1": "Beber", "tense2": "boire/boit/a bu/boira/buvait/boive" },
+  { "tense1": "Dormir", "tense2": "dormir/dort/a dormi/dormira/dormait/dorme" },
+  { "tense1": "Trabajar", "tense2": "travailler/travaille/a travaillé/travaillera/travaillait/travaille" },
+  { "tense1": "Estudiar", "tense2": "étudier/étudie/a étudié/étudiera/étudiait/étudie" },
+  { "tense1": "Viajar", "tense2": "voyager/voyage/a voyagé/voyagera/voyageait/voyage" },
+  { "tense1": "Comprar", "tense2": "acheter/achète/a acheté/achètera/achetait/achète" },
+  { "tense1": "Vender", "tense2": "vendre/vend/a vendu/vendra/vendait/vende" },
+  { "tense1": "Olvidar", "tense2": "oublier/oublie/a oublié/oubliera/oubliait/oublie" },
+  { "tense1": "Limpiar", "tense2": "nettoyer/nettoie/a nettoyé/nettoiera/nettoyait/nettoie" },
+  { "tense1": "Cocinar", "tense2": "cuisiner/cuisine/a cuisiné/cuisinera/cuisinait/cuisine" },
+  { "tense1": "Conducir", "tense2": "conduire/conduit/a conduit/conduira/conduisait/conduise" },
+  { "tense1": "Nadar", "tense2": "nager/nage/a nagé/nagera/nageait/nage" },
+  { "tense1": "Bailar", "tense2": "danser/danse/a dansé/dansera/dansait/danse" },
+  { "tense1": "Cantar", "tense2": "chanter/chante/a chanté/chantera/chantait/chante" },
+  { "tense1": "Dibujar", "tense2": "dessiner/dessine/a dessiné/dessinera/dessinait/dessine" },
+  { "tense1": "Reparar", "tense2": "réparer/répare/a réparé/réparera/réparait/répare" },
+  { "tense1": "Construir", "tense2": "construire/construit/a construit/construira/construisait/construise" },
+  { "tense1": "Salir", "tense2": "sortir/sort/est sorti/sortira/sortait/sorte" },
+  { "tense1": "Preparar", "tense2": "préparer/prépare/a préparé/préparera/préparait/prépare" },
+  { "tense1": "Responder", "tense2": "répondre/répond/a répondu/répondra/répondait/réponde" },
+  { "tense1": "Cambiar", "tense2": "changer/change/a changé/changera/changeait/change" },
+  { "tense1": "Decidir", "tense2": "décider/décide/a décidé/décidera/décidait/décide" },
+  { "tense1": "Preferir", "tense2": "préférer/préfère/a préféré/préférera/préférait/préfère" },
+  { "tense1": "Intentar", "tense2": "essayer/essaie/a essayé/essaiera/essayait/essaie" },
+  { "tense1": "Reír", "tense2": "rire/rit/a ri/rira/riait/rie" },
+  { "tense1": "Llorar", "tense2": "pleurer/pleure/a pleuré/pleurera/pleurait/pleure" },
+  { "tense1": "Ganar", "tense2": "gagner/gagne/a gagné/gagnera/gagnait/gagne" },
+  { "tense1": "Perder", "tense2": "perdre/perd/a perdu/perdra/perdait/perde" },
+  { "tense1": "Organizar", "tense2": "organiser/organise/a organisé/organisera/organisait/organise" },
+  { "tense1": "Cortar", "tense2": "couper/coupe/a coupé/coupera/coupait/coupe" },
+  { "tense1": "Medir", "tense2": "mesurer/mesure/a mesuré/mesurera/mesurait/mesure" },
+  { "tense1": "Probar", "tense2": "essayer/essaie/a essayé/essaiera/essayait/essaie" },
+  { "tense1": "Cerrar", "tense2": "fermer/ferme/a fermé/fermera/fermait/ferme" },
+  { "tense1": "Discutir", "tense2": "discuter/discute/a discuté/discutera/discutait/discute" },
+  { "tense1": "Proponer", "tense2": "proposer/propose/a proposé/proposera/proposait/propose" },
+  { "tense1": "Imaginar", "tense2": "imaginer/imagine/a imaginé/imaginera/imaginait/imagine" },
+  { "tense1": "Elegir", "tense2": "choisir/choisit/a choisi/choisira/choisissait/choisisse" },
+  { "tense1": "Invitar", "tense2": "inviter/invite/a invité/invitera/invitait/invite" },
+  { "tense1": "Crecer", "tense2": "grandir/grandit/a grandi/grandira/grandissait/grandisse" },
+  { "tense1": "Mejorar", "tense2": "améliorer/améliore/a amélioré/améliorera/améliorait/améliore" },
+  { "tense1": "Proteger", "tense2": "protéger/protège/a protégé/protégera/protégeait/protège" },
+  { "tense1": "Dudar", "tense2": "douter/doute/a douté/doutera/doutait/doute" },
+  { "tense1": "Aceptar", "tense2": "accepter/accepte/a accepté/acceptera/acceptait/accepte" },
+  { "tense1": "Rechazar", "tense2": "refuser/refuse/a refusé/refusera/refusait/refuse" },
+  { "tense1": "Reemplazar", "tense2": "remplacer/remplace/a remplacé/remplacera/remplaçait/remplace" },
+  { "tense1": "Mentir", "tense2": "mentir/ment/a menti/mentira/mentait/mente" },
+  { "tense1": "Prometer", "tense2": "promettre/promet/a promis/promettra/promettait/promette" },
+  { "tense1": "Soñar", "tense2": "rêver/rêve/a rêvé/rêvera/rêvait/rêve" },
+  { "tense1": "Desarrollar", "tense2": "développer/développe/a développé/développera/développait/développe" },
+  { "tense1": "Planear", "tense2": "planifier/planifie/a planifié/planifiera/planifiait/planifie" },
+  { "tense1": "Visitar", "tense2": "visiter/visite/a visité/visitera/visitait/visite" },
+  { "tense1": "Resolver", "tense2": "résoudre/résout/a résolu/résoudra/résolvait/résolve" },
+  { "tense1": "Participar", "tense2": "participer/participe/a participé/participera/participait/participe" },
+  { "tense1": "Crear", "tense2": "créer/crée/a créé/créera/créait/crée" },
+  { "tense1": "Merecer", "tense2": "mériter/mérite/a mérité/méritera/méritait/mérite" },
+  { "tense1": "Descubrir", "tense2": "découvrir/découvre/a découvert/découvrira/découvrait/découvre" },
+  { "tense1": "Funcionar", "tense2": "fonctionner/fonctionne/a fonctionné/fonctionnera/fonctionnait/fonctionne" }
+];
 
         const words_french = [
 { "tense1": "Uno", "tense2": "Un" },
