more arabic verbs

--- a/index.html
+++ b/index.html
@@ -268,7 +268,23 @@
    { "tense2": "يَزْرَعُ / زَرَعَ / زَرْع / ازْرَعْ / يُزْرَعُ / زُرِعَ", "tense1": "Planter" },
    { "tense2": "يُنْتِجُ / أَنْتَجَ / إِنْتَاج / أَنْتِجْ / يُنْتَجُ / أُنْتِجَ", "tense1": "Produire" },
    { "tense2": "يُوَظِّفُ / وَظَّفَ / تَوْظِيف / وَظِّفْ / يُوَظَّفُ / وُظِّفَ", "tense1": "Embaucher" },
-   { "tense2": "يَقْطِفُ / قَطَفَ / قَطْف / اقْطِفْ / يُقْطَفُ / قُطِفَ", "tense1": "Cueillir" }
+   { "tense2": "يَقْطِفُ / قَطَفَ / قَطْف / اقْطِفْ / يُقْطَفُ / قُطِفَ", "tense1": "Cueillir" },
+   {"tense1": "couvrir", "tense2": "غطى/يغطي/تغطية/غطِّ/يُغطَّى/غُطِّيَ"},
+    {"tense1": "prouver", "tense2": "أثبت/يثبت/إثبات/أثبِت/يُثبَت/أُثبِت"},
+    {"tense1": "creuser", "tense2": "حفر/يحفر/حفر/احفر/يُحفَر/حُفِر"},
+    {"tense1": "enrouler", "tense2": "لف/يلف/لف/لُفَّ/يُلَف/لُفَّ"},
+    {"tense1": "construire", "tense2": "بنى/يبني/بناء/ابنِ/يُبنَى/بُنِيَ"},
+    {"tense1": "faire du shopping", "tense2": "تسوق/يتسوق/تسوق/تسوَّق/يُتَسَوَّق/تُسُوِّق"},
+    {"tense1": "aguantar", "tense2": "تحمل/يتحمل/تحمل/تحمَّل/يُتَحَمَّل/تُحُمِّل"},
+    {"tense1": "marcher", "tense2": "مشى/يمشي/مشي/امشِ/يُمشَى/مُشِيَ"},
+    {"tense1": "courir", "tense2": "ركض/يركض/ركض/اركض/يُركَض/رُكِض"},
+    {"tense1": "promener", "tense2": "تجول/يتجول/تجول/تجوَّل/يُتَجَوَّل/تُجُوِّل"},
+    {"tense1": "dépasser", "tense2": "تجاوز/يتجاوز/تجاوز/تجاوَز/يُتَجَاوَز/تُجُوِّز"},
+    {"tense1": "inspirer", "tense2": "ألهم/يلهم/إلهام/ألهِم/يُلهَم/أُلهِم"},
+    {"tense1": "choisir", "tense2": "اختار/يختار/اختيار/اختَر/يُختَار/اُختِير"},
+    {"tense1": "grandir", "tense2": "نما/ينمو/نمو/انمُ/يُنمَى/نُمِيَ"},
+    {"tense1": "apparaître", "tense2": "ظهر/يظهر/ظهور/اظهر/يُظهَر/ظُهِر"},
+    {"tense1": "montrer", "tense2": "أظهر/يُظهر/إظهار/أظهِر/يُظهَر/أُظهِر"}
 ]
 
         const words_arabic = [
@@ -633,7 +649,74 @@
   {"tense1": "embaucher", "tense2": "وَظَّفَ/يُوَظِّفُ/تَوْظِيف/وَظِّفْ"},
   {"tense1": "cueillir", "tense2": "قَطَفَ/يَقْطِفُ/قَطْف/اقْطِفْ"},
   {"tense1": "raisin", "tense2": "عنب"},
-  {"tense1": "champ", "tense2": "حقل"}
+  {"tense1": "champ", "tense2": "حقل"},
+  {"tense1": "tas", "tense2": "كَوْمَةُ"},
+  {"tense1": "couleur", "tense2": "لون"},
+  {"tense1": "tableau", "tense2": "لوحة"},
+  {"tense1": "brume", "tense2": "ضَبَاب"},
+  {"tense1": "coin", "tense2": "الزاوية"},
+  {"tense1": "pierre", "tense2": "حَجَر"},
+  {"tense1": "diagonal", "tense2": "قُطْرِي"},
+  {"tense1": "carré", "tense2": "مُرَبَّع"},
+  {"tense1": "cube", "tense2": "مُكَعَّب"},
+  {"tense1": "rectangle", "tense2": "مستطيل"},
+  {"tense1": "triangle", "tense2": "مثلث"},
+  {"tense1": "pyramide", "tense2": "هرم"},
+  {"tense1": "civilisation", "tense2": "حضارة"},
+  {"tense1": "peuple", "tense2": "شعب"},
+  {"tense1": "population", "tense2": "سكان"},
+  {"tense1": "couvrir", "tense2": "غطى/يغطي/تغطية/غطِّ/يُغطَّى/غُطِّيَ"},
+  {"tense1": "moche", "tense2": "قبيح"},
+  {"tense1": "sale", "tense2": "قذر"},
+  {"tense1": "arc", "tense2": "قوس"},
+  {"tense1": "récipient", "tense2": "وعاء"},
+  {"tense1": "couverture", "tense2": "غطاء"},
+  {"tense1": "prouver", "tense2": "أثبت/يثبت/إثبات/أثبِت/يُثبَت/أُثبِت"},
+  {"tense1": "creuser", "tense2": "حفر/يحفر/حفر/احفر/يُحفَر/حُفِر"},
+  {"tense1": "pirate", "tense2": "قُرْصَان"},
+  {"tense1": "liquide", "tense2": "سائل"},
+  {"tense1": "chaud", "tense2": "ساخن"},
+  {"tense1": "côte", "tense2": "ساحل"},
+  {"tense1": "sorcier", "tense2": "ساحر"},
+  {"tense1": "toxique", "tense2": "سَامّ"},
+  {"tense1": "matelas", "tense2": "فِرَاش"},
+  {"tense1": "enrouler", "tense2": "لف/يلف/لف/لُفَّ/يُلَف/لُفَّ"},
+  {"tense1": "rideau", "tense2": "ستارة"},
+  {"tense1": "veste", "tense2": "سترة"},
+  {"tense1": "tapis", "tense2": "سجادة"},
+  {"tense1": "architecture", "tense2": "عمارة"},
+  {"tense1": "brique", "tense2": "طوب"},
+  {"tense1": "construire", "tense2": "بنى/يبني/بناء/ابنِ/يُبنَى/بُنِيَ"},
+  {"tense1": "faire du shopping", "tense2": "تسوق/يتسوق/تسوق/تسوَّق/يُتَسَوَّق/تُسُوِّق"},
+  {"tense1": "prudent", "tense2": "سديد"},
+  {"tense1": "distance", "tense2": "مسافة"},
+  {"tense1": "superficie", "tense2": "مساحة"},
+  {"tense1": "ruban", "tense2": "شريطة"},
+  {"tense1": "étang", "tense2": "بركة"},
+  {"tense1": "gazon", "tense2": "عشب"},
+  {"tense1": "en bas", "tense2": "في الأسفل"},
+  {"tense1": "au milieu", "tense2": "في المنتصف"},
+  {"tense1": "en haut", "tense2": "في الأعلى"},
+  {"tense1": "nuageux", "tense2": "غائم"},
+  {"tense1": "pluvieux", "tense2": "ماطر"},
+  {"tense1": "ensoleillé", "tense2": "مشمس"},
+  {"tense1": "aguantar", "tense2": "تحمل/يتحمل/تحمل/تحمَّل/يُتَحَمَّل/تُحُمِّل"},
+  {"tense1": "coquillage", "tense2": "صدف"},
+  {"tense1": "rose", "tense2": "وردة"},
+  {"tense1": "marcher", "tense2": "مشى/يمشي/مشي/امشِ/يُمشَى/مُشِيَ"},
+  {"tense1": "courir", "tense2": "ركض/يركض/ركض/اركض/يُركَض/رُكِض"},
+  {"tense1": "pointu", "tense2": "مدبب"},
+  {"tense1": "promener", "tense2": "تجول/يتجول/تجول/تجوَّل/يُتَجَوَّل/تُجُوِّل"},
+  {"tense1": "dépasser", "tense2": "تجاوز/يتجاوز/تجاوز/تجاوَز/يُتَجَاوَز/تُجُوِّز"},
+  {"tense1": "promenade", "tense2": "نُزْهَة"},
+  {"tense1": "inspirer", "tense2": "ألهم/يلهم/إلهام/ألهِم/يُلهَم/أُلهِم"},
+  {"tense1": "professionnel", "tense2": "محترف"},
+  {"tense1": "choisir", "tense2": "اختار/يختار/اختيار/اختَر/يُختَار/اُختِير"},
+  {"tense1": "ongle", "tense2": "ظفر"},
+  {"tense1": "griffe", "tense2": "مِخْلَب"},
+  {"tense1": "grandir", "tense2": "نما/ينمو/نمو/انمُ/يُنمَى/نُمِيَ"},
+  {"tense1": "apparaître", "tense2": "ظهر/يظهر/ظهور/اظهر/يُظهَر/ظُهِر"},
+  {"tense1": "montrer", "tense2": "أظهر/يُظهر/إظهار/أظهِر/يُظهَر/أُظهِر"}
 ]
 
         // French
