new arabic words

--- a/index.html
+++ b/index.html
@@ -288,7 +288,23 @@
   {"tense1": "choisir", "tense2": "اِخْتَارَ/يَخْتَارُ/اِخْتِيَار/اِخْتَرْ/يُخْتَارُ/اُخْتِيرَ"},
   {"tense1": "grandir", "tense2": "نَمَا/يَنْمُو/نُمُوّ/اُنْمُ/يُنْمَى/نُمِيَ"},
   {"tense1": "apparaître", "tense2": "ظَهَرَ/يَظْهَرُ/ظُهُور/اِظْهَرْ/يُظْهَرُ/ظُهِرَ"},
-  {"tense1": "montrer", "tense2": "أَظْهَرَ/يُظْهِرُ/إِظْهَار/أَظْهِرْ/يُظْهَرُ/أُظْهِرَ"}
+  {"tense1": "montrer", "tense2": "أَظْهَرَ/يُظْهِرُ/إِظْهَار/أَظْهِرْ/يُظْهَرُ/أُظْهِرَ"},
+  {"tense1": "Remplir", "tense2": "مَلَأَ/يَمْلَأُ/مَلْء/اِمْلَأْ/يُمْلَأُ/مُلِئَ"},
+  {"tense1": "Souffrir", "tense2": "عَانَى/يُعَانِي/مُعَانَاة/عَانِ/يُعَانَى/عُونِيَ"},
+  {"tense1": "Chanter", "tense2": "غَنَّى/يُغَنِّي/غِنَاء/غَنِّ/يُغَنَّى/غُنِّيَ"},
+  {"tense1": "Allumer", "tense2": "أَشْعَلَ/يُشْعِلُ/إِشْعَال/أَشْعِلْ/يُشْعَلُ/أُشْعِلَ"},
+  {"tense1": "Se tromper", "tense2": "تَخَطَّأَ/يَتَخَطَّأُ/تَخَطُّؤ/تَخَطَّأْ/يُتَخَطَّأُ/تُخُطِّئَ"},
+  {"tense1": "Enseigner", "tense2": "عَلَّمَ/يُعَلِّمُ/تَعْلِيم/عَلِّمْ/يُعَلَّمُ/عُلِّمَ"},
+  {"tense1": "Apprendre", "tense2": "تَعَلَّمَ/يَتَعَلَّمُ/تَعَلُّم/تَعَلَّمْ/يُتَعَلَّمُ/تُعُلِّمَ"},
+  {"tense1": "Hésiter", "tense2": "تَرَدَّدَ/يَتَرَدَّدُ/تَرَدُّد/تَرَدَّدْ/يُتَرَدَّدُ/تُرُدِّدَ"},
+  {"tense1": "Caliner", "tense2": "عَانَقَ/يُعَانِقُ/مُعَانَقَة/عَانِقْ/يُعَانَقُ/عُونِقَ"},
+  {"tense1": "Accueillir", "tense2": "اِسْتَقْبَلَ/يَسْتَقْبِلُ/اِسْتِقْبَال/اِسْتَقْبِلْ/يُسْتَقْبَلُ/اُسْتُقْبِلَ"},
+  {"tense1": "Affronter", "tense2": "وَاجَهَ/يُوَاجِهُ/مُوَاجَهَة/وَاجِهْ/يُوَاجَهُ/وُوجِهَ"},
+  {"tense1": "Se comporter", "tense2": "تَصَرَّفَ/يَتَصَرَّفُ/تَصَرُّف/تَصَرَّفْ/يُتَصَرَّفُ/تُصُرِّفَ"},
+  {"tense1": "Grimper", "tense2": "تَسَلَّقَ/يَتَسَلَّقُ/تَسَلُّق/تَسَلَّقْ/يُتَسَلَّقُ/تُسُلِّقَ"},
+  {"tense1": "Exploiter", "tense2": "اِسْتَغَلَّ/يَسْتَغِلُّ/اِسْتِغْلَال/اِسْتَغِلَّ/يُسْتَغَلُّ/اُسْتُغِلَّ"},
+  {"tense1": "Hériter", "tense2": "وَرِثَ/يَرِثُ/وِرَاثَة/رِثْ/يُورَثُ/وُرِثَ"},
+  {"tense1": "Exploser", "tense2": "اِنْفَجَرَ/يَنْفَجِرُ/اِنْفِجَار/اِنْفَجِرْ/يُنْفَجَرُ/اُنْفُجِرَ"}
 ]
 
         const words_arabic = [
@@ -720,7 +736,49 @@
 {"tense1": "griffe", "tense2": "مِخْلَبٌ"},
 {"tense1": "grandir", "tense2": "نَمَا/يَنْمُو/نُمُوٌّ/اُنْمُ/يُنْمَى/نُمِيَ"},
 {"tense1": "apparaître", "tense2": "ظَهَرَ/يَظْهَرُ/ظُهُورٌ/اِظْهَرْ/يُظْهَرُ/ظُهِرَ"},
-{"tense1": "montrer", "tense2": "أَظْهَرَ/يُظْهِرُ/إِظْهَارٌ/أَظْهِرْ/يُظْهَرُ/أُظْهِرَ"}
+{"tense1": "montrer", "tense2": "أَظْهَرَ/يُظْهِرُ/إِظْهَارٌ/أَظْهِرْ/يُظْهَرُ/أُظْهِرَ"},
+{"tense1": "Microbes", "tense2": "الجَرَاثِيم"},
+  {"tense1": "Hasard", "tense2": "صُدْفَة"},
+  {"tense1": "Remplir", "tense2": "مَلَأَ/يَمْلَأُ/مَلْء/اِمْلَأْ/يُمْلَأُ/مُلِئَ"},
+  {"tense1": "Concert", "tense2": "حَفْلَة مُوسِيقِيَّة"},
+  {"tense1": "Chaine YouTube", "tense2": "قَنَاة يُوتْيُوب"},
+  {"tense1": "Souffrir", "tense2": "عَانَى/يُعَانِي/مُعَانَاة/عَانِ/يُعَانَى/عُونِيَ"},
+  {"tense1": "Chanter", "tense2": "غَنَّى/يُغَنِّي/غِنَاء/غَنِّ/يُغَنَّى/غُنِّيَ"},
+  {"tense1": "Chant", "tense2": "غِنَاء"},
+  {"tense1": "Couverture", "tense2": "غِطَاء"},
+  {"tense1": "Allumer", "tense2": "أَشْعَلَ/يُشْعِلُ/إِشْعَال/أَشْعِلْ/يُشْعَلُ/أُشْعِلَ"},
+  {"tense1": "Médaille", "tense2": "وِسَام"},
+  {"tense1": "En terme de", "tense2": "مِنْ حَيْثُ"},
+  {"tense1": "Plateforme/podium", "tense2": "مَنَصَّة"},
+  {"tense1": "Maladie", "tense2": "مَرَض"},
+  {"tense1": "Se tromper", "tense2": "تَخَطَّأَ/يَتَخَطَّأُ/تَخَطُّؤ/تَخَطَّأْ/يُتَخَطَّأُ/تُخُطِّئَ"},
+  {"tense1": "Enseigner", "tense2": "عَلَّمَ/يُعَلِّمُ/تَعْلِيم/عَلِّمْ/يُعَلَّمُ/عُلِّمَ"},
+  {"tense1": "Apprendre", "tense2": "تَعَلَّمَ/يَتَعَلَّمُ/تَعَلُّم/تَعَلَّمْ/يُتَعَلَّمُ/تُعُلِّمَ"},
+  {"tense1": "Campagne", "tense2": "رِيف"},
+  {"tense1": "Plume", "tense2": "رِيشَة"},
+  {"tense1": "Violence", "tense2": "عُنْف"},
+  {"tense1": "Hésiter", "tense2": "تَرَدَّدَ/يَتَرَدَّدُ/تَرَدُّد/تَرَدَّدْ/يُتَرَدَّدُ/تُرُدِّدَ"},
+  {"tense1": "Caliner", "tense2": "عَانَقَ/يُعَانِقُ/مُعَانَقَة/عَانِقْ/يُعَانَقُ/عُونِقَ"},
+  {"tense1": "Épée", "tense2": "سَيْف"},
+  {"tense1": "Été", "tense2": "صَيْف"},
+  {"tense1": "Accueillir", "tense2": "اِسْتَقْبَلَ/يَسْتَقْبِلُ/اِسْتِقْبَال/اِسْتَقْبِلْ/يُسْتَقْبَلُ/اُسْتُقْبِلَ"},
+  {"tense1": "Généralement", "tense2": "عُمُومًا"},
+  {"tense1": "Affronter", "tense2": "وَاجَهَ/يُوَاجِهُ/مُوَاجَهَة/وَاجِهْ/يُوَاجَهُ/وُوجِهَ"},
+  {"tense1": "Argent (métal)", "tense2": "فِضَّة"},
+  {"tense1": "Rangée", "tense2": "صَفّ"},
+  {"tense1": "Vide", "tense2": "فَارِغ"},
+  {"tense1": "Acteur", "tense2": "مُمَثِّل"},
+  {"tense1": "Comportement", "tense2": "سُلُوك"},
+  {"tense1": "Se comporter", "tense2": "تَصَرَّفَ/يَتَصَرَّفُ/تَصَرُّف/تَصَرَّفْ/يُتَصَرَّفُ/تُصُرِّفَ"},
+  {"tense1": "Tournage", "tense2": "التَّصْوِير"},
+  {"tense1": "Fourure", "tense2": "فَرْو"},
+  {"tense1": "Grimper", "tense2": "تَسَلَّقَ/يَتَسَلَّقُ/تَسَلُّق/تَسَلَّقْ/يُتَسَلَّقُ/تُسُلِّقَ"},
+  {"tense1": "Exploiter", "tense2": "اِسْتَغَلَّ/يَسْتَغِلُّ/اِسْتِغْلَال/اِسْتَغِلَّ/يُسْتَغَلُّ/اُسْتُغِلَّ"},
+  {"tense1": "Mâle", "tense2": "ذَكَر"},
+  {"tense1": "Femelle", "tense2": "أُنْثَى"},
+  {"tense1": "Inondation", "tense2": "فَيَضَان"},
+  {"tense1": "Hériter", "tense2": "وَرِثَ/يَرِثُ/وِرَاثَة/رِثْ/يُورَثُ/وُرِثَ"},
+  {"tense1": "Exploser", "tense2": "اِنْفَجَرَ/يَنْفَجِرُ/اِنْفِجَار/اِنْفَجِرْ/يُنْفَجَرُ/اُنْفُجِرَ"}
 ]
 
         // French
